<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/photo_detail_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">


    <androidx.appcompat.widget.Toolbar
            android:id="@+id/photo_detail_fragment_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ImageView
                android:id="@+id/photo_detail_fragment_toolbar_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_chevron_left_black_24dp"
        />


        <TextView
                android:id="@+id/photo_detail_fragment_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_gravity="center"
                android:textSize="16dp"
                android:textStyle="bold|italic"
                android:textColor="@android:color/black"
        />


        <ImageView
                android:id="@+id/photo_detail_fragment_toolbar_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_share_black_24dp"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"/>


    </androidx.appcompat.widget.Toolbar>


    <ImageView
            android:id="@+id/photo_detail_image"
            android:layout_width="@dimen/photo_detail_image_witdh"
            android:layout_height="@dimen/photo_detail_image_height"
            app:layout_constrainedWidth="true"
            app:layout_constrainedHeight="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/photo_detail_bottom_container"
            app:layout_constraintTop_toBottomOf="@+id/photo_detail_fragment_toolbar"
            app:layout_constraintDimensionRatio="@+string/photo_detail_image_dimenRatio"
    />

    <LinearLayout
            android:id="@+id/photo_detail_image_metadada_container"
            android:layout_width="@dimen/photo_detail_image_witdh"
            android:layout_height="@dimen/photo_detail_image_height"
            android:orientation="vertical"
            app:layout_constrainedWidth="true"
            app:layout_constrainedHeight="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/photo_detail_bottom_container"
            app:layout_constraintTop_toBottomOf="@+id/photo_detail_fragment_toolbar"
            android:gravity="center"
            app:layout_constraintDimensionRatio="@+string/photo_detail_image_dimenRatio"
            android:visibility="gone">

        <TextView
                android:id="@+id/photo_detail_image_metadada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
        />


        <Button
                android:id="@+id/photo_detail_image_metadada_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retry"
        />

    </LinearLayout>


    <FrameLayout
            android:id="@+id/photo_detail_bottom_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="112dp"
            app:layout_constraintBottom_toBottomOf="parent">

        <Button
                android:id="@+id/photo_detail_button_go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photo_detail_button_go_text"
                android:layout_gravity="center"/>


        <Button
                android:id="@+id/photo_detail_button_show_metadata_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photo_detail_button_show_metadata_text"
                android:layout_gravity="start|bottom"/>


        <Button
                android:id="@+id/photo_detail_button_save_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photo_detail_button_save_image_text"
                android:layout_gravity="end|bottom"/>

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>